tests/compiler/enumWithParenthesizedInitializer1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.2/tests/cases/compiler/enumWithParenthesizedInitializer1.ts`, Apache-2.0 License

enum E {
 e = -(3 
} //~ ERROR: Expected ')'.